Tarihçe hazır.Yapay zeka uygulamaları kısmını yap

--- a/index.html
+++ b/index.html
@@ -726,7 +726,163 @@
 
 </section>
 
+<!--team başlangıç-->
+<section id="team" class="mySection bg-light">
+    <div class="container">
+        <div class="text-center mb-5">
+            <h2 class="s-heading text-uppercase fw-bold">Yapay Zeka Uygulamaları</h2>
+            <h3 class="s-subheading text-muted">
+                Yapay zeka uygulamaları en çok sanal asistanlar ile biliniyor olsa da aslında çok geniş bir kapsamda kullanılmaktadır. Eğitim, eğlence, siber güvenlik, ulaşım, finans ve sağlık alanında geliştirilen yapay zeka uygulamaları ile kullanıcıların hayatını kolaylaştıran pek çok servisi hayata geçirmek mümkün hale gelmiştir.
+            </h3>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="t-member text-center">
+                        <img class="mx-auto rounded-circle" src="img/alexa.jpg" alt=".." />
+                        <h4>Alexa
+                        </h4>
+                        <p class="text-muted">
+                            Alexa, Amazon’un yapay zeka destekli sanal asistanıdır. Uygulama, Alexa destekli cihazlarla eşleştirildiğinde akıllı ev sistemlerini, tabletleri, giyilebilir cihazları ve TV'leri doğrudan telefondan kontrol etmek için kullanılabilir. Alexa, konuşmayı metne dönüştürerek soruları cevaplayabilir. Ayrıca hatırlatıcılar kurabilir, arama yapabilir, mesaj atabilir, listeler oluşturabilir ve hatta ürün siparişi de verebilir.
+                        </p>
+                        <a href="#" class="btn btn-dark mx-2 btn-social">
+                            <i class="bi bi-alexa twxt white"></i>
+                        </a>
+                        <a href="#" class="btn btn-primary mx-2 btn-social">
+                            <i class="bi bi-instagram"></i>
+                        </a>
+                        <a href="#" class="btn btn-warning mx-2 btn-social">
+                            <i class="bi bi-twitter text-white"></i>
+                        </a>
+                        <a href="#" class="btn btn-dark mx-2 btn-social">
+                            <i class="bi bi-facebook "></i>
+                        </a>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="t-member text-center">
+                        <img class="mx-auto rounded-circle" src="img/j2 (1).jpg" alt=".." />
+                        <h4>Siri
+                        </h4>
+                        <p class="text-muted">
+                            Apple’ın sanal asistanı Siri en popüler ve en yaygın kullanılan yapay zeka uygulamalarından biridir. Siri, sesli komutlar ile arama yapabilir, mesaj gönderebilir, soruları yanıtlayabilir ve akıllı ev sistemleri ile entegre olabilir. Apple platformu kullananların favori uygulamalarından olan Siri, kullanıcıların diline, aramalarına ve yapmış olduğu tercihlere uyum sağlayabilir.
+                        </p>
+                        <a href="#" class="btn btn-dark mx-2 btn-social">
+                            <i class="bi bi-alexa twxt white"></i>
+                        </a>
+                        <a href="#" class="btn btn-primary mx-2 btn-social">
+                            <i class="bi bi-instagram"></i>
+                        </a>
+                        <a href="#" class="btn btn-warning mx-2 btn-social">
+                            <i class="bi bi-twitter text-white"></i>
+                        </a>
+                        <a href="#" class="btn btn-dark mx-2 btn-social">
+                            <i class="bi bi-facebook "></i>
+                        </a>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="t-member text-center">
+                        <img class="mx-auto rounded-circle" src="img/googleasist.webp" alt=".." />
+                        <h4>Google Assistant
+                        </h4>
+                        <p class="text-muted">
+                            Google’ın yapay zeka destekli sanal asistanı olan Google Assistant hem mobil cihazlarda hem akıllı ev cihazlarında hem de arabaların bilgisayar sistemlerinde kullanılıyor. Google Assistant, sesli komut algılama dışında çevrimiçi ürün arama, randevu alma ve gerçek zamanlı çeviri gibi özellikler de sunuyor.
+                        </p>
+                        <a href="#" class="btn btn-dark mx-2 btn-social">
+                            <i class="bi bi-alexa twxt white"></i>
+                        </a>
+                        <a href="#" class="btn btn-primary mx-2 btn-social">
+                            <i class="bi bi-instagram"></i>
+                        </a>
+                        <a href="#" class="btn btn-warning mx-2 btn-social">
+                            <i class="bi bi-twitter text-white"></i>
+                        </a>
+                        <a href="#" class="btn btn-dark mx-2 btn-social">
+                            <i class="bi bi-facebook "></i>
+                        </a>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="t-member text-center">
+                        <img class="mx-auto rounded-circle" src="img/cortana.webp" alt=".." />
+                        <h4>Microsoft Cortana
+                        </h4>
+                        <p class="text-muted">
+                            Microsoft tarafından geliştirilen yapay zeka destekli sanal asistan Cortana, soruları yanıtlamak, takvimi yönetmek, not tutmak gibi görevleri yerine getirebiliyor. Cortana, kişiselleştirilmiş öneriler sunmak için doğal dil işleme, Bing arama motoru ve bulunduğu cihazlardaki verilerinden yararlanıyor. Cortana ayrıca kullanıcıların akıllı telefonlarını diğer cihazlarla da senkronize edebiliyor.
+                            Diğer uygulamalar;
+                            Popülaritesi giderek artan diğer yapay zeka uygulamaları arasında; eğitim odaklı bir uygulama olan Socratic, kullanıcılarla tıpkı bir insan gibi sohbet edebilen Replika, sözlü sorulara cevap verebilen IBM Watson, İngilizce eğitim uygulaması Elsa Speak, harcama yönetimi uygulaması Fyle ve pek çok farklı işletim sisteminde çalışabilen sanal asistan Databot sayılabilir.
+                        </p>
+                        <a href="#" class="btn btn-dark mx-2 btn-social">
+                            <i class="bi bi-alexa twxt white"></i>
+                        </a>
+                        <a href="#" class="btn btn-primary mx-2 btn-social">
+                            <i class="bi bi-instagram"></i>
+                        </a>
+                        <a href="#" class="btn btn-warning mx-2 btn-social">
+                            <i class="bi bi-twitter text-white"></i>
+                        </a>
+                        <a href="#" class="btn btn-dark mx-2 btn-social">
+                            <i class="bi bi-facebook "></i>
+                        </a>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="t-member text-center">
+                        <img class="mx-auto rounded-circle" src="img/innova.jpg" alt=".." />
+                        <h4>İnnova ve yapay zeka
+                        </h4>
+                        <p class="text-muted">
+                            İnnova’nın geliştirmiş olduğu InnovAI yapay zeka modülleri, henüz meydana gelmemiş sorunların önceden tespiti, cihaz ve müşterilerin davranış desenlerinin saptanması ve büyük verinin analizi sonucu kararlar alınmasını mümkün kılarak şirketlere rekabette avantaj sağlıyor.
+                        </p>
+                        <a href="#" class="btn btn-dark mx-2 btn-social">
+                            <i class="bi bi-alexa twxt white"></i>
+                        </a>
+                        <a href="#" class="btn btn-primary mx-2 btn-social">
+                            <i class="bi bi-instagram"></i>
+                        </a>
+                        <a href="#" class="btn btn-warning mx-2 btn-social">
+                            <i class="bi bi-twitter text-white"></i>
+                        </a>
+                        <a href="#" class="btn btn-dark mx-2 btn-social">
+                            <i class="bi bi-facebook "></i>
+                        </a>
+                        </a>
+                    </div>
+                </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
+<div class="container py-4">
+    <div class="row align-items-center">
+        <div class="col-sm-6 col-md-3 my-3">
+            <a href="#">
+                <img class="img-fluid d-bolck mx-auto img-logo" src="img/alexa1.jpg" alt=".." />
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-3 my-3">
+            <a href="#">
+                <img class="img-fluid d-bolck mx-auto img-logo" src="img/google1.png" alt=".." />
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-3 my-3">
+            <a href="#">
+                <img class="img-fluid d-bolck mx-auto img-logo" src="img/facebook.jpg" alt=".." />
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-3 my-3">
+            <a href="#">
+                <img class="img-fluid d-bolck mx-auto img-logo" src="img/micro.jpg" alt=".." />
+            </a>
+        </div>
+    </div>
+</div>
 
 <script src="js/booststrap/bootstrap.bundle.js"></script>
 <script src="js/custom/extra.js"></script>
