İletişim kısmını yapıyorum ve düzenliycem

--- a/index.html
+++ b/index.html
@@ -884,6 +884,77 @@
     </div>
 </div>
 
+<section id="contact" class="mySection">
+    <div class="container">
+        <div class="text-center mb-5">
+            <h2 class="s-heading text-uppercase fw-bold text-white">İletişim</h2>
+            <h3 class="s-subheading text-muted">
+            </h3>
+        </div>
+        <form id="FromContant" novalidate>
+            <div class="row align-items-stretch mb-5">
+                <div class="cold-md-6">
+                    <div class="form-floating mb-4">
+                        <input type="text" id="name" class="form-control" placeholder="Adınız" required>
+                        <label for="name">Adınız</label>
+                        <div class="İnvalid-feedback" id="ErrName"></div>
+                    </div>
+                    <div class="form-floating mb-4">
+                        <input type="email" id="email" class="form-control" placeholder="E-posta" required>
+                        <label for="email">E-posta Adresiniz</label>
+                        <div class="İnvalid-feedback" id="ErrMail"></div>
+                    </div>
+                    <div class="form-floating mb-4">
+                        <input type="tel" id="phone" class="form-control" placeholder="Telefon Numaranız" required>
+                        <label for="phone">Telefon Numaranız</label>
+                        <div class="İnvalid-feedback" id="ErrPhone"></div>
+                    </div>
+                </div>
+                <div class="cold-md-6">
+                    <div class="form-floating form-textarea mb-md-0">
+                        <textarea id="message" class="form-control" placeholder="Mesajınız" required></textarea>
+                        <label for="message">Mesajınız</label>
+                        <div class="İnvalid-feedback" id="ErrMesaage"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center">
+                <button type="sumbit" class="btn btn-danger btn-lg text-uppercase py-3">
+                    Mesaj Gönder
+                </button>
+            </div>
+        </form>
+    </div>
+</section>
+
+<footer class="footer py-4">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-4 text-lg-start text muted">
+                Copyright &copy; New World 2023
+            </div>
+            <div class="col-lg-4 my-3 my-lg-0">
+                <a href="#" class="btn btn-dark mx-2 btn-social">
+                    <i class="bi bi-alexa twxt white"></i>
+                </a>
+                <a href="#" class="btn btn-primary mx-2 btn-social">
+                    <i class="bi bi-instagram"></i>
+                </a>
+                <a href="#" class="btn btn-warning mx-2 btn-social">
+                    <i class="bi bi-twitter text-white"></i>
+                </a>
+                <a href="#" class="btn btn-dark mx-2 btn-social">
+                    <i class="bi bi-facebook "></i>
+                </a>
+                </a>
+            </div>
+            <div class="col-lg-4 text-lg-end">
+                <a href="#" class="link-info text-decoration-none me-3">Gizlilik Politikası</a>
+                <a href="#" class="link-secondery text-decoration-none">Anasayfa</a>
+            </div>
+        </div>
+    </div>
+</footer>
 <script src="js/booststrap/bootstrap.bundle.js"></script>
 <script src="js/custom/extra.js"></script>
    
