--- a/index.html
+++ b/index.html
@@ -948,6 +948,8 @@
                 </a>
                 </a>
             </div>
+            <iframe src="https://www.google.com/maps/embed?
+            pb=!1m18!1m12!1m3!1d781.1740937491796!2d27.18955564460396!3d38.44848161073401!2m3!1f0!2f0!3f0!3m2!" width="600" height="450" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
             <div class="col-lg-4 text-lg-end">
                 <a href="#" class="link-info text-decoration-none me-3">Gizlilik Politikası</a>
                 <a href="#" class="link-secondery text-decoration-none">Anasayfa</a>
